--- a/index.html
+++ b/index.html
@@ -106,9 +106,42 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+            <div class="container">
+                <h5>MyPhone</h5>
+                <div class="wrapper">
+                    <div class="slider">
+                        <div class="slider__nav">
+                            <label for="s1" class="slider__nav-item"></label>
+                            <label for="s2" class="slider__nav-item"></label>
+                            <label for="s3" class="slider__nav-item"></label>
+                            <label for="s4" class="slider__nav-item"></label>
+                        </div>
+                        <div class="slider__items">
+                            <input type="radio" name="s" id="s1">
+                            <input type="radio" name="s" id="s2">
+                            <input type="radio" name="s" id="s3">
+                            <input type="radio" name="s" id="s4">
+                            <div class="item s1">
+                                <img src="images/grid1.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="images/grid2.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="images/grid3.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img src="images/grid4.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="buy" id="buy">
             <div class="container">
-                <h5>Купить MyPhone</h5>
+                <h6>Купить MyPhone</h6>
                 <form class="buy__form" method="POST" action="php/thanks.php">
                     <div class="form__title">Заполните форму для доставки</div>
                     <label for="name">Имя:</label>
