Исправлены ошибки + добавлена кнопка вверх

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <header class="header">
         <div class="header__title">
-            <h1 class="header__title-text">MyPhone</h1>
-            <div class="header__title-extratext">Лидер среди гаджетов!</div>
+            <a href="index.html">
+                <h1 class="header__title-text">MyPhone</h1>
+                <div class="header__title-extratext">Лидер среди гаджетов!</div>
+            </a>
         </div>
         <button class="menu-btn">
             <span></span>
@@ -135,6 +137,9 @@
             </div>
         </section>
     </main>
+    <div class="gotop">
+        <img src="images/top.svg" alt="">
+    </div>
     <footer>
         <div class="container">
             <div class="footer__text">
