Добавлена возможность менять тему

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
                 <h1 class="header__title-text">MyPhone</h1>
                 <div class="header__title-extratext">Лидер среди гаджетов!</div>
             </a>
+            <div class="icons">
+                <button id="sun"><img src="images/sun.svg" alt=""></button>
+                <button id="moon"><img src="images/moon.svg" alt=""></button>
+            </div>
+            <div class="hide-icons display__none">
+                <button id="sun-light"><img src="images/sunlight.svg" alt=""></button>
+                <button id="moon-light"><img src="images/moonlight.svg" alt=""></button>
+            </div>
         </div>
         <button class="menu-btn">
             <span></span>
